Added header styles

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <header class="header">
       <div class="header-left">
         <button class="menu-btn">
-          <img src="./images/icon-menu.svg" alt="Menu" />
+          <img src="images/icon-menu.svg" alt="Menu" />
         </button>
-        <img src="./images/logo.svg" alt="Sneakers" class="logo" />
+        <img src="images/logo.svg" alt="Sneakers" class="logo" />
       </div>
       <nav class="nav">
         <button class="close-btn">
@@ -40,10 +40,10 @@
       </nav>
       <div class="header-right">
         <button class="cart-btn">
-          <img src="./images/icon-cart.svg" alt="Cart" />
+          <img src="images/icon-cart.svg" alt="Cart" />
           <span class="cart-count">0</span>
         </button>
-        <img src="./images/image-avatar.png" alt="Avatar" class="avatar" />
+        <img src="images/image-avatar.png" alt="Avatar" class="avatar" />
       </div>
     </header>
 
@@ -78,15 +78,15 @@
           <div class="product-actions">
             <div class="quantity-selector">
               <button class="quantity-btn minus">
-                <img src="./images/icon-minus.svg" alt="Decrease quantity" />
+                <img src="images/icon-minus.svg" alt="Decrease quantity" />
               </button>
               <span class="quantity">0</span>
               <button class="quantity-btn plus">
-                <img src="./images/icon-plus.svg" alt="Increase quantity" />
+                <img src="images/icon-plus.svg" alt="Increase quantity" />
               </button>
             </div>
             <button class="add-to-cart">
-              <img src="./images/icon-cart.svg" alt="" />
+              <img src="images/icon-cart.svg" alt="" />
               Add to cart
             </button>
           </div>
