--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Karla:ital,wght@0,200..800;1,200..800&family=Kumbh+Sans:wght@100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
@@ -25,19 +25,19 @@
           <img src="images/icon-menu.svg" alt="Menu" />
         </button>
         <img src="images/logo.svg" alt="Sneakers" class="logo" />
+        <nav class="nav">
+          <button class="close-btn">
+            <img src="images/icon-close.svg" alt="Close menu" />
+          </button>
+          <ul class="nav-list">
+            <li><a href="#">Collections</a></li>
+            <li><a href="#">Men</a></li>
+            <li><a href="#">Women</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav class="nav">
-        <button class="close-btn">
-          <img src="./images/icon-close.svg" alt="Close menu" />
-        </button>
-        <ul class="nav-list">
-          <li><a href="#">Collections</a></li>
-          <li><a href="#">Men</a></li>
-          <li><a href="#">Women</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
       <div class="header-right">
         <button class="cart-btn">
           <img src="images/icon-cart.svg" alt="Cart" />
@@ -56,7 +56,69 @@
 
     <main class="main">
       <section class="product">
-        <div class="product-gallery"></div>
+        <div class="product-gallery">
+          <!-- Main Product Image -->
+          <div class="main-image-container">
+            <img
+              src="images/image-product-1.jpg"
+              alt="Product image 1"
+              class="main-image active"
+            />
+            <img
+              src="images/image-product-2.jpg"
+              alt="Product image 2"
+              class="main-image"
+            />
+            <img
+              src="images/image-product-3.jpg"
+              alt="Product image 3"
+              class="main-image"
+            />
+            <img
+              src="images/image-product-4.jpg"
+              alt="Product image 4"
+              class="main-image"
+            />
+
+            <!-- Navigation buttons for mobile -->
+            <button class="prev-btn mobile-only">
+              <img src="images/icon-previous.svg" alt="Previous" />
+            </button>
+            <button class="next-btn mobile-only">
+              <img src="images/icon-next.svg" alt="Next" />
+            </button>
+          </div>
+
+          <!-- Thumbnail Navigation -->
+          <div class="thumbnail-container">
+            <div class="thumbnail-wrapper">
+              <button class="thumbnail-btn active" data-index="0">
+                <img
+                  src="images/image-product-1-thumbnail.jpg"
+                  alt="Thumbnail 1"
+                />
+              </button>
+              <button class="thumbnail-btn" data-index="1">
+                <img
+                  src="images/image-product-2-thumbnail.jpg"
+                  alt="Thumbnail 2"
+                />
+              </button>
+              <button class="thumbnail-btn" data-index="2">
+                <img
+                  src="images/image-product-3-thumbnail.jpg"
+                  alt="Thumbnail 3"
+                />
+              </button>
+              <button class="thumbnail-btn" data-index="3">
+                <img
+                  src="images/image-product-4-thumbnail.jpg"
+                  alt="Thumbnail 4"
+                />
+              </button>
+            </div>
+          </div>
+        </div>
 
         <div class="product-info">
           <p class="company">SNEAKER COMPANY</p>
